Update to fix white space on screen

--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,7 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+html {
+  height: 100%;
+  background-color:black;
+}
